remove letter spacing; fix mobile add collab button

--- a/src/public/modules/core/css/admin-form-header.css
+++ b/src/public/modules/core/css/admin-form-header.css
@@ -82,7 +82,6 @@
   }
 
   #admin-form #form-header #collab-circle-plus {
-    height: 36px;
     width: 36px;
   }
 }
@@ -317,7 +316,7 @@
   font-style: normal;
   font-stretch: normal;
   line-height: 1.38;
-  letter-spacing: 1px;
+  letter-spacing: 0;
   color: #4a4a4a;
   padding-bottom: 25px;
 }
